--- a/admin/Tpl/Jz/index.html
+++ b/admin/Tpl/Jz/index.html
@@ -41,7 +41,7 @@
         <else />
           <span style="color:red;">未审核</span>
         </if></td>
-        <td>[ <a href="__URL__/edit/uid/{ms:$vo.uid}">编辑</a> ][ <a link="__URL__/del/uid/{ms:$vo.uid}" href="javascript:void(0)" name="{ms:$vo.uname}" class="del">删除</a>]</td>
+        <td>[ <a href="__URL__/edit/uid/{ms:$vo.uid}">编辑</a> ][ <a href="javascript:void(0)" uname="{ms:$vo.uname}" uid="{ms:$vo.uid}" class="del">删除</a> ]</td>
     </tr>
     </volist>
 </table>
@@ -51,17 +51,25 @@
    </div>
  </div>	
 <script type="text/javascript">
-	$(function(){
-		$(".del").click(function(){
-			var delLink=$(this).attr("link");
-			popup.confirm('你真的打算删除【<b>'+$(this).attr("name")+'</b>】吗?','温馨提示',function(action){
-				if(action == 'ok'){
-					top.window.location.href=delLink;
+$(function(){
+	$('.del').click(function(){
+		var uid = $(this).attr('uid');
+		var uname = $(this).attr('uname');
+		if(confirm('删除不可恢复！您确认要删除【'+$(this).attr("uname")+'】吗？')){
+			$.ajax({
+				url:'__URL__/del',
+				data:{"uid":uid},
+				dataType:'json',
+				cache:false,
+				success:function(msg){
+					alert(msg);
 				}
 			});
+		}else{
 			return false;
-		});
+		}
 	});
+});
 </script> 
 </body>
 </html>
