--- a/admin/Tpl/Ls/edit.html
+++ b/admin/Tpl/Ls/edit.html
@@ -36,7 +36,7 @@
                             <tr>
                                 <th width="120">审核：</th>
                                 <td><input type="radio" name="status" value="0" <if condition="$info['status'] eq 0">checked="checked"</if> />未审核
-                                <input type="radio" name="status" value="1" <if condition="$info['status'] eq 0">checked="checked"</if> />已审核</td>
+                                <input type="radio" name="status" value="1" <if condition="$info['status'] eq 1">checked="checked"</if> />已审核</td>
                             </tr>
                             <tr>
                                 <th>登录密码：</th>
@@ -127,6 +127,7 @@ $(function(){
 	//表单提交
 	$(".wyjsubmit").click(function(){
 		var uname=$("input[name='uname']").val();
+		var status=$("input[name='status']").val();
 		var password=$("input[name='password']").val();
 		var jlpwd=$("input[name='jlpwd']").val();
 		var phone=$("input[name='phone']").val();
@@ -147,7 +148,7 @@ $(function(){
 			type:'POST',
 			cache:false,
 			dataType:'JSON',
-			data:{"uname":uname,"password":password,"jlpwd":jlpwd,"phone":phone,"classid":classid,"obj_id":obj_id,"province":province,"city":city,"area":area,"rankid":rankid,"edu_id":edu_id,"coin":coin,"image":image,"remarks":remarks,"uid":uid},
+			data:{"uname":uname,"status":status,"password":password,"jlpwd":jlpwd,"phone":phone,"classid":classid,"obj_id":obj_id,"province":province,"city":city,"area":area,"rankid":rankid,"edu_id":edu_id,"coin":coin,"image":image,"remarks":remarks,"uid":uid},
 			success:function(msg){
 				alert(msg);
 				history.go(-1);  //返回上一页
