--- a/admin/Tpl/Access/nodelist.html
+++ b/admin/Tpl/Access/nodelist.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="__PUBLIC__/css/admin/style.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang123.css" type="text/css" />
+<script src="__PUBLIC__/js/jquery-1.7.2.min.js"></script>
+<script src="__PUBLIC__/js/layer/layer.min.js"></script>
 <style>
 .wapper{width:100%;height:auto;margin:auto 0px;}
 .right{float:right;width:78%;height:600px;box-shadow:0px 3px 6px #BDBFBE}
@@ -64,23 +66,18 @@
     $(function(){
        $(".del").click(function(){
         var id=$(this).attr('tid');
-          if(confirm('删除不可恢复！你确认要删除？')){
-            $.ajax({
-                url:'__URL__/delNode',
-                data:{"id":id},
-                dataType:'json',
-                cache:false,    
-                success:function(msg){
-                    if(msg==1){
-                        alert('删除节点成功');
-                    }else{
-                       alert('删除节点失败'); 
-                    }
-                }
-            });
-          }else{
-           return false;
-          }
+          layer.confirm('确认删除?',function(index){
+                 $.ajax({
+                   url:'__URL__/delNode',
+                   data:{"id":id},
+                   type:'get',
+                   dataType:'json',
+                   cache:false,
+                   success:function(msg){
+                     layer.alert(msg,9,'提示信息',function(){window.location.href='__URL__/nodeList';})
+                   }
+                 });
+           });
        });
     });
 </script>
