--- a/admin/Tpl/Access/rolelist.html
+++ b/admin/Tpl/Access/rolelist.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="__PUBLIC__/css/admin/style.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang123.css" type="text/css" />
+<script src="__PUBLIC__/js/jquery-1.7.2.min.js"></script>
+<script src="__PUBLIC__/js/layer/layer.min.js"></script>
 <style>
 .wapper{width:100%;height:auto;margin:auto 0px;}
 .right{float:right;width:78%;height:600px;box-shadow:0px 3px 6px #BDBFBE}
@@ -46,7 +48,7 @@
                                 <td>{ms:$vo.name}</td>
                                 <td align="left">{ms:$vo.remark}</td>
                                 <td>{ms:$vo.statusTxt}</td>
-                                <td><if condition="$vo.pid eq 0">--<else/>[ <a href="javascript:void(0);" class="opStatus" val="{ms:$vo.status}">{ms:$vo.chStatusTxt}</a> ] [ <a href="__URL__/editRole?id={ms:$vo.id}" class="edit">编辑</a> ] [<a link="__URL__/delRole/id/{ms:$vo['id']}" href="javascript:void();" name="{ms:$vo['name']}" class="del" onclick="del();" >删除</a>] [ <a href="__URL__/changeRole?id={ms:$vo.id}" class="edit">权限分配</a> ]</if></td>
+                                <td><if condition="$vo.pid eq 0">--<else/>[ <a href="javascript:void(0);" class="opStatus" val="{ms:$vo.status}">{ms:$vo.chStatusTxt}</a> ] [ <a href="__URL__/editRole?id={ms:$vo.id}" class="edit">编辑</a> ] [<a tid="{ms:$vo['id']}" name="{ms:$vo['name']}" class="del" >删除</a>] [ <a href="__URL__/changeRole?id={ms:$vo.id}" class="edit">权限分配</a> ]</if></td>
                             </tr>
                         </volist>
                     </table>
@@ -57,13 +59,19 @@
 <script type="text/javascript">
     $(function(){
         $(".del").click(function(){ 
-            var delLink=$(this).attr("link"); 
-            popup.confirm('你真的打算删除【<b>'+$(this).attr("name")+'</b>】吗?','温馨提示',function(action){ 
-                if(action == 'ok'){ 
-                    top.window.location.href=delLink; 
-                } 
-            }); 
-            return false; 
+            var id=$(this).attr("tid"); 
+            layer.confirm('确认删除?',function(index){
+                 $.ajax({
+                   url:'__URL__/delRole',
+                   data:{"id":id},
+                   type:'get',
+                   dataType:'json',
+                   cache:false,
+                   success:function(msg){
+                     layer.alert(msg,9,'提示信息',function(){window.location.href='__URL__/roleList';})
+                   }
+                 });
+           });
         }); 
     });
 </script>
