--- a/admin/Tpl/Article/index.html
+++ b/admin/Tpl/Article/index.html
@@ -6,10 +6,14 @@
 <link rel="stylesheet" href="__PUBLIC__/css/admin/style.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang123.css" type="text/css" />
+<link rel="stylesheet" href="__PUBLIC__/css/admin.css"/>
+<script src="__PUBLIC__/js/jquery-1.7.2.min.js"></script>
+<script src="__PUBLIC__/js/layer/layer.min.js"></script>
 </head>
 
 <body>
-<include file="Common:header" />
+<include file="Common:header"/>  
+ 
 <!--***************************content--left---right******************************-->   
              <div class="wapper">
                 <include file="Common:left" />
@@ -27,7 +31,7 @@
             <td><if condition="$vo['status'] eq 1">已发布<else />未审核</if></td>
             <td>{ms:$vo.create_time|date="Y-m-d H:i",###}</td>
             <td>{ms:$vo.up_time|date="Y-m-d H:i",###}</td>
-            <td>[ <a href="__URL__/edit?aid={ms:$vo.aid}">编辑 </a> ] [ <a link="__URL__/del/aid/{ms:$vo.aid}" href="javascript:void(0)" name="{ms:$vo.title}" class="del">删除 </a> ]</td>
+            <td>[ <a href="__URL__/edit?aid={ms:$vo.aid}">编辑 </a> ] [ <a href='#' tid='{ms:$vo.aid}' name="{ms:$vo.title}" class="del">删除 </a> ]</td>
         </tr>
     </volist>
 </table>
@@ -40,15 +44,25 @@
         <include file="Common:foot" />
         <script type="text/javascript">
             $(function(){
+                function del(){
+
+                }
                 $(".del").click(function(){
-                    var delLink=$(this).attr("link");
-                    popup.confirm('你真的打算删除【<b>'+$(this).attr("name")+'</b>】吗?','温馨提示',function(action){
-                        if(action == 'ok'){
-                            top.window.location.href=delLink;
-                        }
-                    });
-                    return false;
-                });
+                  var id=$(this).attr('tid');
+                        $.ajax({
+                            url:'__URL__/del',
+                            dataType:'json',
+                            cache:false,
+                            data:{"id":id},
+                            success:function(msg){
+                                if(msg==1){
+                                    layer.alert('删除成功',9,'操作提示',function(){window.location.href='__URL__/index'});
+                                }else if(msg==0){
+                                    layer.alert('删除失败',9,'操作提示');
+                                }
+                            }
+                         });
+              });
             });
         </script>
     </body>
