提示信息ajax修改

--- a/admin/Tpl/Access/index.html
+++ b/admin/Tpl/Access/index.html
@@ -67,7 +67,7 @@
     $(function(){
         $(".del").click(function(){ 
             var id=$(this).attr("tid"); 
-             layer.confirm('确认删除?',function(index){
+             layer.confirm('确认删除?',function(){
                  $.ajax({
                    url:'__URL__/delAdmin',
                    data:{"aid":id},
