--- a/admin/Tpl/Lesson/index.html
+++ b/admin/Tpl/Lesson/index.html
@@ -14,7 +14,7 @@
                 <include file="Common:left" />
                 <div id="Right"  class="right">
                     <div class="tab1">
-                        <div class="current">活动列表---<a href="__URL__/add">添加活动</a></div>
+                        <div class="current">课程列表---<a href="__URL__/add">添加课程</a></div>
                     </div> 
                     <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab">
                         <tr>
