--- a/admin/Tpl/Access/rolelist.html
+++ b/admin/Tpl/Access/rolelist.html
@@ -60,7 +60,7 @@
     $(function(){
         $(".del").click(function(){ 
             var id=$(this).attr("tid"); 
-            layer.confirm('确认删除?',function(index){
+            layer.confirm('确认删除?',function(){
                  $.ajax({
                    url:'__URL__/delRole',
                    data:{"id":id},
