--- a/admin/Tpl/Fangan/index.html
+++ b/admin/Tpl/Fangan/index.html
@@ -32,7 +32,7 @@
 <elseif condition="$vo.status eq 1"/>已审核
 <else />已结束
 </if></td>
-        <td>[ <a href="__URL__/edit?id={ms:$vo.id}">编辑 </a> ] [ <a link="__URL__/del/id/{ms:$vo.id}" href="javascript:void(0)" name="此教学方案" class="del">删除 </a> ]</td>
+        <td>[ <a href="__URL__/edit?id={ms:$vo.id}">编辑 </a> ] [ <a tid="{ms:$vo.id}" name="此教学方案" class="del">删除 </a> ]</td>
     </tr>
 </volist>
                     </table>
@@ -46,13 +46,19 @@
         <script type="text/javascript">
             $(function(){
                 $(".del").click(function(){
-                    var delLink=$(this).attr("link");
-                    popup.confirm('你真的打算删除'+$(this).attr("name")+'吗?','温馨提示',function(action){
-                        if(action == 'ok'){
-                            top.window.location.href=delLink;
-                        }
-                    });
-                    return false;
+                    var id=$(this).attr("tid");
+                    layer.confirm('确认删除?',function(){
+                         $.ajax({
+                           url:'__URL__/del',
+                           data:{"id":id},
+                           type:'get',
+                           dataType:'json',
+                           cache:false,
+                           success:function(msg){
+                             layer.alert(msg,9,'提示信息',function(){window.location.href='__URL__/index';})
+                           }
+                         });
+                   });
                 });
             });
         </script>
