--- a/admin/Tpl/Institution/Index.html
+++ b/admin/Tpl/Institution/Index.html
@@ -40,23 +40,35 @@
 	$(function(){
 		$(".del").click(function(){
 			var id=$(this).attr("tid");
-			if(confirm('亲!确认要删除?')){
-				$.ajax({
-				url:"__URL__/del",
-				type:'POST',
-				dataType:'JSON',
-				cache:false,
-				data:{"id":id},
-				success:function(msg){
-					if(msg==1){
-						alert('删除成功');
-						window.location.href='__URL__/index';
-					}else{
-						alert('删除失败');
-					}
-				}
-			 });
-			}
+			layer.confirm('确认删除?',function(){
+                         $.ajax({
+                           url:'__URL__/del',
+                           data:{"id":id},
+                           type:'POST',
+                           dataType:'json',
+                           cache:false,
+                           success:function(msg){
+                             layer.alert(msg,9,'提示信息',function(){window.location.href='__URL__/index';})
+                           }
+                         });
+                   });
+			// if(confirm('亲!确认要删除?')){
+			// 	$.ajax({
+			// 	url:"__URL__/del",
+			// 	type:'POST',
+			// 	dataType:'JSON',
+			// 	cache:false,
+			// 	data:{"id":id},
+			// 	success:function(msg){
+			// 		if(msg==1){
+			// 			alert('删除成功');
+			// 			window.location.href='__URL__/index';
+			// 		}else{
+			// 			alert('删除失败');
+			// 		}
+			// 	}
+			//  });
+			// }
 			
 		});
 	});
