--- a/admin/Tpl/Institution/add.html
+++ b/admin/Tpl/Institution/add.html
@@ -70,10 +70,10 @@ textarea{width: 300px;height: 150px;}
             cache:false,
             success:function(msg){
                 if(msg==1){
-                  alert('添加成功');
-                  window.location.href='__URL__/index';
+                  layer.alert('添加成功',9,'提示信息',function(){window.location.href='__URL__/index';});
+                  
                 }else if(msg==0){
-                  alert('添加失败');
+                  layer.alert('添加失败',8,'提示信息');
                 }
             }
         });
