--- a/admin/Tpl/Institution/modify.html
+++ b/admin/Tpl/Institution/modify.html
@@ -71,10 +71,10 @@ textarea{width: 300px;height: 150px;resize:none;}
             cache:false,
             success:function(msg){
                 if(msg==1){
-                  alert('修改成功');
-                  window.location.href='__URL__/index';
+                  layer.alert('修改成功',9,'提示信息',function(){window.location.href='__URL__/index';});
+                  
                 }else if(msg==0){
-                  alert('修改失败');
+                  layer.alert('修改失败',8,'提示信息');
                 }
             }
         });
