--- a/admin/Tpl/Access/addadmin.html
+++ b/admin/Tpl/Access/addadmin.html
@@ -31,7 +31,7 @@ th{ text-align:right;}
                     <div class="Item hr">
                         <div class="current">添加/编辑管理员</div>
                     </div>
-                    <form action="" method="post">
+                 <!--    <form action="" method="post"> -->
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="table1">
                             <tr>
                                 <th width="120">登录账号：</th>
@@ -80,7 +80,7 @@ th{ text-align:right;}
                             </tr>
                         </table>
                         <input type="hidden" name="aid" value="{ms:$info.aid}"/>
-                    </form>
+                    <!-- </form> -->
                 </div>
             </div>
         </div>
@@ -88,17 +88,46 @@ th{ text-align:right;}
 <include file="Common:foot" />
 <script type="text/javascript">
     $(".submit").click(function(){
-            <if condition="ACTION_NAME neq 'editAdmin'">
-            if($.trim($("input[name='username']").val())==''){
-				popup.alert("用户名不能为空");
-				return false;
-			}
-			if($.trim($("input[name='password']").val())==''){
-				popup.alert("密码不能为空");
-				return false;
-			}
-            </if>
-            commonAjaxSubmit();
+        var aid=$("input[name='aid']").val();
+        var username=$("input[name='username']").val();
+        var realname=$("input[name='realname']").val();
+        var email=$("input[name='email']").val();
+        var password=$("input[name='password']").val();
+        var status=$("select[name='status']").val();
+        var role_id=$("select[name='role_id']").val();
+        var remark=$("textarea[name='remark']").val();
+
+     if(username=='' || password==''){
+        layer.alert("用户名或密码不能为空！",8,'提示信息');
+     }else{ 
+        $.ajax({
+            url:'__URL__/modify_admin',
+            dataType:'json',
+            cache:false,
+            type:'post',
+            data:{"username":username,"realname":realname,"email":email,"password":password,"status":status,"role_id":role_id,"remark":remark,"aid":aid},
+            success:function(msg){
+                if(msg==1){
+                    layer.alert("操作成功",9,'提示信息',function(){window.location.href='__URL__/index'});
+                }else if(msg==0){
+                     layer.alert("操作失败",8,'提示信息');
+                }
+            }
+        });
+
+     }
+    
+   //          <if condition="ACTION_NAME neq 'editAdmin'">
+   //          if($.trim($("input[name='username']").val())==''){
+			// 	layer.alert("用户名不能为空",8,'提示信息');
+			// 	return false;
+			// }
+			// if($.trim($("input[name='password']").val())==''){
+			// 	layer.alert("密码不能为空",8,'提示信息');
+			// 	return false;
+			// }
+   //          </if>
+   //          commonAjaxSubmit();
     });
 </script>
 </body>
