--- a/admin/Tpl/Index/html_add.html
+++ b/admin/Tpl/Index/html_add.html
@@ -30,17 +30,34 @@
    <div class="right">
           <div class="tab1"> <div class="current">  邀请码管理   --- <a href="__URL__/html_add" > 添加邀请码 </a></div></div>
 		   <div class="right_list"> 
-<form action="__URL__/add_yqm" method="post" >
+<!-- <form action="__URL__/add_yqm" method="post" > -->
 <table>
-<tr height="40"><td>生成邀请码：</td><td><input type="text" value="" class="inpu2" name="yqm" />&nbsp;条</td></tr>
-<tr height="40"><td><input type="submit" value="提交" class="btn submit" /></td><td><input type="reset" value="重置" class="btn submit" /></td></tr>
+<tr height="40"><td>生成邀请码：</td><td><input type="text" value="" class="inpu2" />&nbsp;条</td></tr>
+<tr height="40"><td><input type="button" value="提交" class="btn submit" id="btn" /></td><td><input type="reset" value="重置" class="btn submit" /></td></tr>
 </table>
-</form>
+<!-- </form> -->
 		   </div>
 		  
    </div>
    
    <div class="footer"></div>
   </div>	   
+<script type="text/javascript">
+	$(function(){
+		$(".btn").click(function(){
+			var num=$(".inpu2").val();
+			$.ajax({
+				url:'__URL__/add_yqm',
+				type:'post',
+				dataType:'JSON',
+				data:{'yqm':num},
+				cache:false,
+				success:function(msg){
+					layer.alert(msg,9,'提示信息',function(){window.location.href='__URL__/yqm_list';});
+				}
+			});
+		});
+	});
+</script>
 </body>
 </html>
