--- a/admin/Tpl/Ls/edit.html
+++ b/admin/Tpl/Ls/edit.html
@@ -110,7 +110,7 @@
                             </tr>
                             <tr>
                                 <th>备注：</th>
-                                <td><textarea name="remarks" style="width:300px; height:100px; resize:none;">{ms:$info.coin}</textarea></td>
+                                <td><textarea name="remarks" style="width:300px; height:100px; resize:none;">{ms:$info.remarks}</textarea></td>
                             </tr>
                             <tr>
                                 <td colspan="2"><button class="btn wyjsubmit">提交</button></td>
